# easyfermi

./: .gitignore  .mailmap  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  deploy.yml
code/: __init__.py  easyFermi.py  easyfermi.py
code/ebl/: README.md
code/resources/ebl/: README.md
docs/source/: Basic_analysis.rst  SED.rst  api.rst  conf.py  custom_analysis.rst  extension.rst  index.rst  lightcurve.rst  localization.rst  usage.rst
src/easyfermi/: __init__.py  easyfermi.py  version.py
src/easyfermi/_dev_version/: __init__.py
